--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,14 @@
 			<version>1.0.0</version>
 			<systemPath>${basedir}/lib/dans-dbf-lib-1.0.0-beta-10.jar</systemPath>
 		</dependency>
+		
+		<dependency>
+			<scope>system</scope>
+			<groupId>javadbf</groupId>
+			<artifactId>javadbf</artifactId>
+			<version>0.4.0</version>
+			<systemPath>${basedir}/lib/javadbf-0.4.0.jar</systemPath>
+		</dependency>
 
 		<dependency>
 			<groupId>dom4j</groupId>
