--- a/pom.xml
+++ b/pom.xml
@@ -35,14 +35,14 @@
 			<version>4.12</version>
 		</dependency>
 
-		<dependency>
-			<scope>system</scope>
-			<groupId>dans-dbf-lib</groupId>
-			<artifactId>dans-dbf-lib</artifactId>
-			<version>1.0.0</version>
-			<systemPath>${basedir}/lib/dans-dbf-lib-1.0.0-beta-10.jar</systemPath>
-		</dependency>
-		
+		<!-- <dependency> -->
+		<!-- <scope>system</scope> -->
+		<!-- <groupId>dans-dbf-lib</groupId> -->
+		<!-- <artifactId>dans-dbf-lib</artifactId> -->
+		<!-- <version>1.0.0</version> -->
+		<!-- <systemPath>${basedir}/lib/dans-dbf-lib-1.0.0-beta-10.jar</systemPath> -->
+		<!-- </dependency> -->
+
 		<dependency>
 			<scope>system</scope>
 			<groupId>javadbf</groupId>
@@ -81,11 +81,11 @@
 			<version>2.3.0</version>
 		</dependency>
 
-		<dependency>
-			<groupId>com.google.code.gson</groupId>
-			<artifactId>gson</artifactId>
-			<version>2.3.1</version>
-		</dependency>
+		<!-- <dependency> -->
+		<!-- <groupId>com.google.code.gson</groupId> -->
+		<!-- <artifactId>gson</artifactId> -->
+		<!-- <version>2.3.1</version> -->
+		<!-- </dependency> -->
 
 		<dependency>
 			<groupId>org.apache.commons</groupId>
@@ -93,17 +93,17 @@
 			<version>1.3.2</version>
 		</dependency>
 
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-context</artifactId>
-			<version>4.1.6.RELEASE</version>
-		</dependency>
+		<!-- <dependency> -->
+		<!-- <groupId>org.springframework</groupId> -->
+		<!-- <artifactId>spring-context</artifactId> -->
+		<!-- <version>4.1.6.RELEASE</version> -->
+		<!-- </dependency> -->
 
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-core</artifactId>
-			<version>4.1.6.RELEASE</version>
-		</dependency>
+		<!-- <dependency> -->
+		<!-- <groupId>org.springframework</groupId> -->
+		<!-- <artifactId>spring-core</artifactId> -->
+		<!-- <version>4.1.6.RELEASE</version> -->
+		<!-- </dependency> -->
 
 		<dependency>
 			<groupId>log4j</groupId>
