--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,15 +1,13 @@
 # Root logger option
-log4j.rootLogger=INFO, file, stdout
+# LOG4J daily rolling log files configuration
+log4j.rootLogger=DEBUG, RollingAppender, stdout
 
+log4j.appender.RollingAppender=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.RollingAppender.File=log/nhoz.log
+log4j.appender.RollingAppender.DatePattern='.'yyyy-MM-dd
+log4j.appender.RollingAppender.layout=org.apache.log4j.PatternLayout
+log4j.appender.RollingAppender.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n 
 
-# Direct log messages to a log file
-log4j.appender.file=org.apache.log4j.RollingFileAppender
-log4j.appender.file.File=log/nhoz.log
-log4j.appender.file.MaxFileSize=10MB
-log4j.appender.file.MaxBackupIndex=2
-log4j.appender.file.layout=org.apache.log4j.PatternLayout
-log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
- 
 # Direct log messages to stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
