--- a/pom.xml
+++ b/pom.xml
@@ -15,17 +15,68 @@
 	</properties>
 
 	<build>
-		<plugins>
+        <finalName>Nhoz_3</finalName>
+
+        <plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.2</version>
 				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
+					<source>7</source>
+					<target>7</target>
 				</configuration>
 			</plugin>
-		</plugins>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>3.6.1</version>
+                <executions>
+                    <execution>
+                        <id>copy-dependencies</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>copy-dependencies</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${project.build.directory}/nhoz_lib</outputDirectory>
+                            <includeScope>compile</includeScope>
+                            <excludeTransitive>false</excludeTransitive>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <version>1.8</version>
+                <executions>
+                    <execution>
+                        <id>package-dist-zip</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                        <configuration>
+                            <tasks>
+                                <!-- Create the ZIP file -->
+                                <zip destfile="${project.build.directory}/Nhoz_3_dist.zip">
+                                    <!-- Add the nhoz_lib folder -->
+                                    <zipfileset dir="${project.build.directory}/nhoz_lib" prefix="nhoz_lib"/>
+                                    <!-- Add the main JAR -->
+                                    <zipfileset file="${project.build.directory}/Nhoz_3.jar" />
+                                    <!-- Add the script from project base directory -->
+                                    <zipfileset file="${project.basedir}/run_nhoz_3.bat" />
+                                </zip>
+                            </tasks>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+        </plugins>
 	</build>
 
 	<dependencies>
@@ -81,29 +132,11 @@
 			<version>2.3.0</version>
 		</dependency>
 
-		<!-- <dependency> -->
-		<!-- <groupId>com.google.code.gson</groupId> -->
-		<!-- <artifactId>gson</artifactId> -->
-		<!-- <version>2.3.1</version> -->
-		<!-- </dependency> -->
-
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-io</artifactId>
 			<version>1.3.2</version>
 		</dependency>
-
-		<!-- <dependency> -->
-		<!-- <groupId>org.springframework</groupId> -->
-		<!-- <artifactId>spring-context</artifactId> -->
-		<!-- <version>4.1.6.RELEASE</version> -->
-		<!-- </dependency> -->
-
-		<!-- <dependency> -->
-		<!-- <groupId>org.springframework</groupId> -->
-		<!-- <artifactId>spring-core</artifactId> -->
-		<!-- <version>4.1.6.RELEASE</version> -->
-		<!-- </dependency> -->
 
 		<dependency>
 			<groupId>log4j</groupId>
